// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.vue - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- @prettier -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>


=====================================output=====================================
<!-- @prettier -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;

exports[`without-pragma.vue - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================




<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

=====================================output=====================================
<!-- @format -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css"></style>

================================================================================
`;
